--- a/prueba-concepto-2/src/style.css
+++ b/prueba-concepto-2/src/style.css
@@ -29,6 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  justify-content: center;
 }
 
 h1 {
@@ -94,4 +95,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.carta {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  background-color: #aee2ff;
 }
