Mejora prueba concepto 4

--- a/prueba-concepto-4/src/style.css
+++ b/prueba-concepto-4/src/style.css
@@ -109,6 +109,10 @@ button:focus-visible {
   background-color: #aee2ff;
 }
 
+.carta img {
+  display: none;
+}
+
 .carta-vuelta {
   display: flex;
   border-radius: 10px;
