--- a/prueba-concepto-2/src/style.css
+++ b/prueba-concepto-2/src/style.css
@@ -98,8 +98,19 @@ button:focus-visible {
 }
 
 .carta {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   border-radius: 10px;
   background-color: #aee2ff;
+}
+
+.carta img {
+  display: none;
+}
+
+.carta-vuelta {
+  display: flex;
+  border-radius: 10px;
+  background-color: #aa66e2;
+  padding: 10px;
 }
