--- a/implementacion/src/style.css
+++ b/implementacion/src/style.css
@@ -108,10 +108,15 @@ button:focus-visible {
   height: 150px;
   border-radius: 10px;
   background-color: #aee2ff;
+  transition: transform 0.6s;
 }
 
 .carta img {
   display: none;
+}
+
+.carta:hover {
+  transform: scale(1.1);
 }
 
 .carta-vuelta {
@@ -119,4 +124,12 @@ button:focus-visible {
   border-radius: 10px;
   background-color: #aa66e2;
   padding: 10px;
+}
+
+.no-mostrar {
+  display: none;
+}
+
+.mostrar {
+  display: block;
 }
